--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "bootstrap": "^4.5.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "prop-types": "^15.8.1",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
