--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "@types/redux-logger": "^3.0.9"
   }
 }
